3960.	[bug]		'dig +sigchase' could loop forever. [RT #37220]

3959.	[bug]		Updates could be lost if they arrived immediately
			after a rndc thaw. [RT #37233]

3958.	[bug]		Detect when writeable files have multiple references
			in named.conf. [RT #37172]

3957.	[bug]		"dnssec-keygen -S" failed for ECCGOST, ECDSAP256SHA256
			and ECDSAP384SHA384. [RT #37183]

3955.	[bug]		Notify messages due to changes are no longer queued
			behind startup notify messages. [RT #24454]

3954.	[bug]		Unchecked mutex init in dlz_dlopen_driver.c [RT #37112]

3953.	[bug]		Don't escape semi-colon in TXT fields. [RT #37159]

3952.	[bug]		dns_name_fullcompare failed to set *nlabelsp when the
			two name pointers were the same. [RT #37176]

	--- 9.9.6 released ---

3950.	[port]		Changed the bin/python Makefile to work around a
			bmake bug in FreeBSD 10 and NetBSD 6. [RT #36993]

	--- 9.9.6rc2 released ---

3947.	[cleanup]	Set the executable bit on libraries when using
			libtool. [RT #36786]

3946.	[cleanup]	Improved "configure" search for a python interpreter.
			[RT #36992]

3945.	[bug]		Invalid wildcard expansions could be incorrectly
			accepted by the validator. [RT #37093]

3944.	[test]		Added a regression test for "server-id". [RT #37057]

3942.	[bug]		Wildcard responses from a optout range should be
			marked as insecure. [RT #37072]

3941.	[doc]		Include the BIND version number in the ARM. [RT #37067]

	--- 9.9.6rc1 released ---

3933.	[bug]		Corrected the implementation of dns_rdata_casecompare()
			for the HIP rdata type.  [RT #36911]

3932.	[test]		Improved named-checkconf tests. [RT #36911]

3931.	[cleanup]	Cleanup how dlz grammar is defined. [RT #36879]

3929.	[bug]		'host -a' needed to clear idnoptions. [RT #36963]

3928.	[test]		Improve rndc system test. [RT #36898]

3925.	[bug]		DS lookup of RFC 1918 empty zones failed. [RT #36917]

3924.	[bug]		Improve 'rndc addzone' error reporting. [RT #35187]

3923.	[bug]		Sanity check the xml2-config output. [RT #22246]
