@@ -39,6 +39,13 @@ zone "example" {
 	masters { 10.53.0.1; };
 };
 
+zone "example2" {
+	type slave;
+	file "example2.bk";
+	allow-update-forwarding { any; };
+	masters { 10.53.0.1; };
+};
+
 zone "nomaster" {
 	type slave;
 	file "nomaster1.db";
